--- a/Reservation.API/Reservation.API.csproj
+++ b/Reservation.API/Reservation.API.csproj
@@ -6,7 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.5.1" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HotelFinder.Business\HotelFinder.Business.csproj" />
+    <ProjectReference Include="..\Reservation.Business\Reservation.Business.csproj" />
   </ItemGroup>
 
 </Project>
