--- a/src/Services/ReservationService/Reservation.API/Properties/launchSettings.json
+++ b/src/Services/ReservationService/Reservation.API/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:9000",
+      "applicationUrl": "http://localhost:48197/",
       "sslPort": 44374
     }
   },
@@ -21,8 +21,7 @@
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      //"applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://localhost:4001;http://localhost:4000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
