SSL Ports Changed

--- a/src/Services/HotelService/HotelFinder.API/Properties/launchSettings.json
+++ b/src/Services/HotelService/HotelFinder.API/Properties/launchSettings.json
@@ -3,6 +3,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "api/hotels",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -14,15 +15,15 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "http://localhost:5000"
+      "applicationUrl": "http://localhost:5000;https://localhost:5001"
     }
   },
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:58197/",
-      "sslPort": 44343
+      "applicationUrl": "http://localhost:9000/",
+      "sslPort": 44302
     }
   }
 }
