--- a/src/ApiGateways/APIGateway/APIGateway.csproj
+++ b/src/ApiGateways/APIGateway/APIGateway.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Ocelot" Version="16.0.1" />
   </ItemGroup>
 
   <ItemGroup>
