--- a/src/Services/ReservationService/Reservation.API/appsettings.json
+++ b/src/Services/ReservationService/Reservation.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "MainConnection": "Server=localhost; Database=HotelDb;uid=sa;pwd=1234; Trust Server Certificate=true;"
+  },
   "AllowedHosts": "*"
 }
